--- a/Tools/testConstruct.html
+++ b/Tools/testConstruct.html
@@ -1,158 +1,71 @@
-<div class="eContainer center" id="eContainer">
-    <div class="qBox" id="question-509099" qid="509099" suggestion="2">
-        <p class="center pb10">Nối từ tiếng Anh đến tiếng Việt theo đúng thứ tự khi dịch.</p>
-        <div class="qAudio" id="qAudio-509099" list="0" audio_loop="2" repeat_after_done="0"></div>
-        <div class="qText" id="qText-509099">
-            <div class="row matching-game">
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509099-1" group="1">A</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509099-1" group="1">Một</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509099-3" group="3">Busy</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509099-2" group="2">tuần</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509099-2" group="2">Week</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509099-3" group="3">bận rộn</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509099-4" group="4">of Meetings</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509099-4" group="4">của các cuộc họp</div>
-                </div>
-                <div class="cl"></div>
-                <div class="cl"></div>
-            </div>
-        </div>
-        <div class="pt5 bold" showdone="1"><span class="tata">A Busy Week of Meetings </span><br><span
-                class="danger">Một tuần bận rộn của các cuộc họp </span></div>
+<div class="eContainer center" id="eContainer"><div class="qBox" id="question-513426" qid="513426" suggestion="3"><div class="qPicture" id="qPicture-513426" showdone="0"><img src="https://media.rootlearning.vn/homework/NPNC/PICTURE/NPNC52D.jpg"></div><div class="qAudio" id="qAudio-513426" list="0" audio_loop="2" repeat_after_done="0"></div>
+                        <div class="qText" id="qText-513426"> 1. Why is a simple “hello” considered helpful?<p class="option option-513426" choose="A">A. It teaches the language</p><p class="option option-513426" choose="B">B. It makes newcomers feel welcome</p><p class="option option-513426" choose="C">C. It gives directions</p><p class="option option-513426" choose="D">D. It solves legal problems</p></div>
+                        <div class="pt10 aHint left" id="aWrong-513426"></div>
+                        <div class="pb10 aHint left" id="aHint-513426"></div>
+                    </div><div class="qBox hide" id="question-513427" qid="513427" suggestion="3"><p class="center pb10">Chọn đáp án đúng</p><div class="qPicture" id="qPicture-513427" showdone="0"><img src="https://media.rootlearning.vn/homework/NPNC/PICTURE/NPNC52D.jpg"></div><div class="qAudio" id="qAudio-513427" list="0" audio_loop="2" repeat_after_done="0"></div>
+                        <div class="qText" id="qText-513427"> 2. Who can act as friendly guides for newcomers?<p class="option option-513427" choose="A">A. Local residents</p><p class="option option-513427" choose="B">B. Policemen</p><p class="option option-513427" choose="C">C. Tourists</p><p class="option option-513427" choose="D">D. Foreign workers</p></div>
+                        <div class="pt10 aHint left" id="aWrong-513427"></div>
+                        <div class="pb10 aHint left" id="aHint-513427"></div>
+                    </div><div class="qBox hide" id="question-513431" qid="513431" suggestion="3"><div class="qPicture" id="qPicture-513431" showdone="0"><img src="https://media.rootlearning.vn/homework/NPNC/PICTURE/NPNC52D.jpg"></div><div class="qAudio" id="qAudio-513431" list="0" audio_loop="2" repeat_after_done="0"></div>
+                        <div class="qText" id="qText-513431"> 3. What does the author suggest about helping newcomers?<p class="option option-513431" choose="A">A. It only helps newcomers</p><p class="option option-513431" choose="B">B. It should be a government job</p><p class="option option-513431" choose="C">C. It builds stronger communities</p><p class="option option-513431" choose="D">D. It’s unnecessary in modern society</p></div>
+                        <div class="pt10 aHint left" id="aWrong-513431"></div>
+                        <div class="pb10 aHint left" id="aHint-513431"></div>
+                    </div>
+<div class="nBox" qid="0" id="nBox" etype="option" edisplay="1" passpercent="0" defaultspeed="1">
+    <div class="circleDuration hide" id="circleDuration"><canvas width="70" height="70"></canvas>
+        <div class="circleNext hide" id="circleNext">Next</div>
     </div>
-    <div class="qBox hide" id="question-509100" qid="509100" suggestion="2">
-        <div class="qAudio" id="qAudio-509100" list="0" audio_loop="2" repeat_after_done="0"></div>
-        <div class="qText" id="qText-509100">
-            <div class="row matching-game">
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509100-1" group="1">This week</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509100-1" group="1">Tuần này</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509100-2" group="2">at work</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509100-2" group="2">ở chỗ làm việc</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509100-3" group="3">has been</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509100-3" group="3">đã</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509100-4" group="4">extremely</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509100-4" group="4">vô cùng</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509100-5" group="5">busy</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509100-5" group="5">bận rộn</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509100-6" group="6">due to</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509100-6" group="6">do</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509100-7" group="7">a series</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509100-7" group="7">một chuỗi</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509100-9" group="9">of important</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509100-8" group="8">các cuộc họp</div>
-                </div>
-                <div class="cl"></div>
-                <div class="col-all-5">
-                    <div class="matching ma" id="ma-509100-8" group="8">meetings.</div>
-                </div>
-                <div class="col-all-2"></div>
-                <div class="col-all-5">
-                    <div class="matching mb" id="mb-509100-9" group="9">quan trọng.</div>
-                </div>
-                <div class="cl"></div>
-                <div class="cl"></div>
-            </div>
-        </div>
-        <div class="pt5 bold" showdone="1"><span class="tata">This week at work has been extremely busy due to a series
-                of important meetings. </span><br><span class="danger">Tuần này ở chỗ làm việc đã vô cùng bận rộn do một
-                chuỗi các cuộc họp quan trọng. </span></div>
+        <button class="c-btn c-btn-info c-btn-small hide" id="hintButton"><span class="sp"><i class="fas fa-eye"></i> Gợi ý</span></button>    <button class="c-btn c-btn-info c-btn-small hide" id="slowButton"><span class="sp"><i class="fas fa-tachometer-alt"></i> Slow</span></button>
+<!--        <button class="button button-info font13 hide" id="slowButton"><i class="fas fa-tachometer-alt"></i> Thường</button>-->
+
+    <button class="c-btn c-btn-success c-btn-medium hide" id="nextButton"><span class="sp font12"><i class="fas fa-check"></i> OK</span></button>
+    <!--        <button class="button button-info font13 hide" id="nextButton"><i class="fas fa-step-forward"></i> OK</button>-->
+
+    <button class="c-btn c-btn-danger c-btn-small hide" id="muteButton" mute="no"><span class="sp"><i class="fas fa-volume-up blinker"></i> Audio</span></button>
+<!--        <button class="button button-warning font13 hide" id="muteButton" mute="no"><i class="fas fa-volume-up blinker"></i></button>-->
+
+    
+    <div class="stageDone success pb10 center hide" id="stageDone" show="text"><p class="pb20 eFont">Chúc mừng bạn đã hoàn thành bài tập!</p><img src="uploads/images/win15-min.gif" style="max-height: 45vh;max-width: 100%;min-width:70%"></div>
+
+    <div class="stageFailed font20 success hide pb10 center hide" id="stageFailed"><img src="uploads/images/fail31-min.gif" width="auto" style="max-height: 45vh;max-width: 100%;min-width:70%"></div>
+    <div class="pt15 pb25"><button class="c-btn c-btn-success c-btn-big hide" id="nextPlayButton"><span class="sp"><i class="fas fa-forward"></i>  Next</span></button></div>
+</div>
+</div>
+
+
+Và
+
+
+<div class="eContainer center" id="eContainer"><p class="laptop" style="margin-top: -20px;"></p><p class="center p10">Chọn đáp án đúng</p><div class="qBox focusShadow" id="question-517422" qid="517422" suggestion="3"><div class="qAudio" id="qAudio-517422" list="0" audio_loop="2" repeat_after_done="0"></div>
+                        <div class="qText" id="qText-517422"><span id="ada-517422" class="ada font16 pointer blinker info"><i class="fas fa-volume-up"></i></span> 1. What did Darcy do on the weekend?<p class="option option-517422" choose="A">A. Traveled to another city</p><p class="option option-517422" choose="B">B. Stayed home and relaxed</p><p class="option option-517422" choose="C">C. Worked all weekend</p><p class="option option-517422" choose="D">D. Went to the beach</p></div>
+                        <div class="pt10 aHint left" id="aWrong-517422"></div>
+                        <div class="pb10 aHint left" id="aHint-517422"></div>
+                    </div><div class="qBox" id="question-517423" qid="517423" suggestion="3"><div class="qAudio" id="qAudio-517423" list="0" audio_loop="2" repeat_after_done="0"></div>
+                        <div class="qText" id="qText-517423"><span id="ada-517423" class="ada font16 pointer warning"><i class="fas fa-volume-mute"></i></span> 2. What did Darcy bring to the Easter event?<p class="option option-517423" choose="A">A. Cake</p><p class="option option-517423" choose="B">B. Chocolate eggs</p><p class="option option-517423" choose="C">C. Deviled eggs</p><p class="option option-517423" choose="D">D. Fruit salad</p></div>
+                        <div class="pt10 aHint left" id="aWrong-517423"></div>
+                        <div class="pb10 aHint left" id="aHint-517423"></div>
+                    </div><div class="qBox" id="question-517424" qid="517424" suggestion="3"><div class="qAudio" id="qAudio-517424" list="0" audio_loop="2" repeat_after_done="0"></div>
+                        <div class="qText" id="qText-517424"><span id="ada-517424" class="ada font16 pointer warning"><i class="fas fa-volume-mute"></i></span> 3. What problem did Darcy have with ingredients?<p class="option option-517424" choose="A">A. She couldn’t find any mustard</p><p class="option option-517424" choose="B">B. She bought the wrong honey</p><p class="option option-517424" choose="C">C. She couldn’t find honey mustard</p><p class="option option-517424" choose="D">D. She ran out of eggs</p></div>
+                        <div class="pt10 aHint left" id="aWrong-517424"></div>
+                        <div class="pb10 aHint left" id="aHint-517424"></div>
+                    </div><audio id="exercise_audio" preload="auto" loop=""><source src="https://media.rootlearning.vn/homework/NPNC/AUDIO/NPNC5260.mp3" type="audio/mp3"></audio>
+<div class="nBox hide" qid="0" id="nBox" etype="option" edisplay="0" passpercent="0" defaultspeed="1">
+    <div class="circleDuration hide" id="circleDuration"><canvas width="70" height="70"></canvas>
+        <div class="circleNext hide" id="circleNext">Next</div>
     </div>
+        <button class="c-btn c-btn-info c-btn-small hide" id="hintButton"><span class="sp"><i class="fas fa-eye"></i> Gợi ý</span></button>    <button class="c-btn c-btn-info c-btn-small hide" id="slowButton"><span class="sp"><i class="fas fa-tachometer-alt"></i> Slow</span></button>
+<!--        <button class="button button-info font13 hide" id="slowButton"><i class="fas fa-tachometer-alt"></i> Thường</button>-->
 
-    <div class="nBox" qid="0" id="nBox" etype="matching" edisplay="1" passpercent="0" defaultspeed="1">
-        <div class="circleDuration hide" id="circleDuration"><canvas width="70" height="70"></canvas>
-            <div class="circleNext hide" id="circleNext">Next</div>
-        </div>
-        <button class="c-btn c-btn-info c-btn-small hide" id="hintButton"><span class="sp"><i class="fas fa-eye"></i>
-                Gợi ý</span></button> <button class="c-btn c-btn-info c-btn-small hide" id="slowButton"><span
-                class="sp"><i class="fas fa-tachometer-alt"></i> Slow</span></button>
-        <!--        <button class="button button-info font13 hide" id="slowButton"><i class="fas fa-tachometer-alt"></i> Thường</button>-->
+    <button class="c-btn c-btn-success c-btn-medium hide" id="nextButton"><span class="sp font12"><i class="fas fa-check"></i> OK</span></button>
+    <!--        <button class="button button-info font13 hide" id="nextButton"><i class="fas fa-step-forward"></i> OK</button>-->
 
-        <button class="c-btn c-btn-medium c-btn-warning" id="nextButton"><span class="sp font12"><i
-                    class="fas fa-question-circle"></i> Guide</span></button>
-        <!--        <button class="button button-info font13 hide" id="nextButton"><i class="fas fa-step-forward"></i> OK</button>-->
+    <button class="c-btn c-btn-danger c-btn-small hide" id="muteButton" mute="no"><span class="sp"><i class="fas fa-volume-up blinker"></i> Audio</span></button>
+<!--        <button class="button button-warning font13 hide" id="muteButton" mute="no"><i class="fas fa-volume-up blinker"></i></button>-->
 
-        <button class="c-btn c-btn-danger c-btn-small hide" id="muteButton" mute="no"><span class="sp"><i
-                    class="fas fa-volume-up blinker"></i> Audio</span></button>
-        <!--        <button class="button button-warning font13 hide" id="muteButton" mute="no"><i class="fas fa-volume-up blinker"></i></button>-->
+    
+    <div class="stageDone success pb10 center hide" id="stageDone" show="text"><p class="pb20 eFont">Chúc mừng bạn đã hoàn thành bài tập!</p><img src="uploads/images/win5-min.gif" style="max-height: 45vh;max-width: 100%;min-width:70%"></div>
 
-
-        <div class="stageDone success pb10 center hide" id="stageDone" show="text">
-            <p class="pb20 eFont">Chúc mừng bạn đã hoàn thành bài tập!</p><img src="uploads/images/win21-min.gif"
-                style="max-height: 45vh;max-width: 100%;min-width:70%">
-        </div>
-
-        <div class="stageFailed font20 success hide pb10 center hide" id="stageFailed"><img
-                src="uploads/images/fail1-min.gif" width="auto" style="max-height: 45vh;max-width: 100%;min-width:70%">
-        </div>
-        <div class="pt15 pb25"><button class="c-btn c-btn-success c-btn-big hide" id="nextPlayButton"><span
-                    class="sp"><i class="fas fa-forward"></i> Next</span></button></div>
-    </div>
+    <div class="stageFailed font20 success hide pb10 center hide" id="stageFailed"><img src="uploads/images/fail11-min.gif" width="auto" style="max-height: 45vh;max-width: 100%;min-width:70%"></div>
+    <div class="pt15 pb25"><button class="c-btn c-btn-success c-btn-big hide" id="nextPlayButton"><span class="sp"><i class="fas fa-forward"></i>  Next</span></button></div>
+</div>
 </div>
